@@ -1,14 +1,17 @@
+import io.gitlab.arturbosch.detekt.Detekt
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    kotlin("jvm") version "1.9.23" apply false
+    kotlin("jvm") version "2.0.0" apply false
     id("org.jmailen.kotlinter") version "4.3.0" apply false
     id("com.github.ben-manes.versions") version "0.51.0"
     id("io.gitlab.arturbosch.detekt") version "1.23.6"
-    id("com.google.devtools.ksp") version "1.9.23-1.0.20" apply false
+    id("com.google.devtools.ksp") version "2.0.0-1.0.21" apply false
     id("io.github.gradle-nexus.publish-plugin") version "2.0.0"
-    id("com.autonomousapps.dependency-analysis") version "1.31.0"
+    id("com.autonomousapps.dependency-analysis") version "1.32.0"
 }
+val agentVersion by extra { "2024.3.0" }
 allprojects {
     group = "org.cs124.jeed"
     version = "2024.5.0"
@@ -18,10 +21,9 @@ subprojects {
         useJUnitPlatform()
         enableAssertions = true
         jvmArgs(
-            "-ea", "--enable-preview", "-Dfile.encoding=UTF-8",
-            "-Xms512m", "-Xmx1G", "-Xss256k",
-            "-XX:+UseZGC", "-XX:ZCollectionInterval=8",
-            "-XX:-OmitStackTraceInFastThrow",
+            "-ea", "--enable-preview", "-Dfile.encoding=UTF-8", "-Djava.security.manager=allow",
+            "-Xms512m", "-Xmx1500m", "-Xss256k",
+            "-XX:+UseZGC", "-XX:ZCollectionInterval=8", "-XX:-OmitStackTraceInFastThrow",
             "--add-opens", "java.base/java.lang=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
@@ -31,10 +33,17 @@ subprojects {
             "--add-exports", "java.management/sun.management=ALL-UNNAMED"
         )
     }
+    tasks.withType<JavaCompile> {
+        sourceCompatibility = "21"
+        targetCompatibility = "21"
+    }
     tasks.withType<KotlinCompile> {
-        kotlinOptions {
-            jvmTarget = JavaVersion.VERSION_17.toString()
+        compilerOptions {
+            jvmTarget.set(JvmTarget.JVM_21)
         }
+    }
+    tasks.withType<Detekt> {
+        jvmTarget = "21"
     }
 }
 tasks.dependencyUpdates {
